fixed hover states and table row  alignment

--- a/webserver/static/isptoolbox/src/sass/atoms/_buttons.sass
+++ b/webserver/static/isptoolbox/src/sass/atoms/_buttons.sass
@@ -1,6 +1,8 @@
 @import ../theme
 
 body
+    .sort-btn
+        border: none !important
     .modal-btn
         margin: 1rem
         float: right
