--- a/webserver/static/isptoolbox/src/sass/molecules/_tables.sass
+++ b/webserver/static/isptoolbox/src/sass/molecules/_tables.sass
@@ -36,10 +36,10 @@
             display: block
     .tower-count
         width: 10%
-        text-align: center
+        text-align: left
     .last-edit
         width: 20%
-        text-align: right
+        text-align: left
     .actions
         width: 10%
         text-align: right
